--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,55 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-color: rgb(114, 162, 228);
+    font-family: ´roboto´, sans-serif;
 }
-h1{
-    color: bisque;
+.contenedor{
+    width: 90%;
+    max-width: 1700px;
+    margin: auto;
 }
-tr:hover{
-    background-color: bisque;
+nav{
+    width: 100%;
+    height: 80px;
+    background: #fff;
+    border-bottom: 1px solid transparent;
+    box-shadow: 1px 1px 10px 0 rgba(0,0,0,.2);
+    position: fixed;
+    top: 0;
+    z-index: 100;
+} 
+.nav{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    width: 100%;
+    align-items: center;
+    padding: 0 40px;
 }
-/* estilo por etiqueta   */
-#nombre{
-    border: 1px solid rgb(153, 68, 68);
-    border-radius: 3px;
-    background-color: aqua;
+.nav .logo{
+    height: 80px;
+
+}
+.nav .logo img{
+    height: 100%;
+
+}
+.nav .enlaces_header a{
+    color: #5d6678;
+    text-decoration: none;
+    margin-left: 20px;
+}
+.contenido_header{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#foto_perfil{
+
+    height: 300px;
+    width: 300px;
 }
